--- a/example/index.html
+++ b/example/index.html
@@ -9,7 +9,7 @@
     <![endif]-->
 </head>
 <body>
-    <div id="map" style="width:100%; height:100%;"></div>
+    <div id="map" style="width:100%; height:calc(100% - 150px);"></div>
     
     <div id="controls">
         <div class="group">
@@ -21,6 +21,11 @@
             <button id="manual-marker-add">Add marker on fixed position</button><br>
             <button id="manual-marker-accuracy">Set accuracy</button><br>
             <button id="manual-marker-remove">Remove marker</button>
+        </div>
+        <div class="group">
+            <button id="manual-marker-add-small">Add small marker on fixed position</button><br>
+            <button id="manual-marker-accuracy-small">Set accuracy and pulsing</button><br>
+            <button id="manual-marker-remove-small">Remove marker</button>
         </div>
     </div>
     <a href="https://github.com/heyman/leaflet-usermarker"><img style="position:absolute; top:0; right:0; border:0;" src="https://s3.amazonaws.com/github/ribbons/forkme_right_red_aa0000.png" alt="Fork me on GitHub"></a>
@@ -81,6 +86,25 @@
             if (manualMarker) {
                 manualMarker.setAccuracy(1500000);
                 //manualMarker.setPulsing(true);
+            }
+        });
+        
+        // manually positioned marker
+        var manualMarkerSmall = null;
+        $("#manual-marker-add-small").click(function() {
+            manualMarkerSmall = L.userMarker([5, 50], {smallIcon:true});
+            manualMarkerSmall.addTo(map);
+        });
+        $("#manual-marker-remove-small").click(function() {
+            if (manualMarkerSmall) {
+                map.removeLayer(manualMarkerSmall);
+                manualMarkerSmall = null;
+            }
+        });
+        $("#manual-marker-accuracy-small").click(function() {
+            if (manualMarkerSmall) {
+                manualMarkerSmall.setAccuracy(1500000);
+                manualMarkerSmall.setPulsing(true);
             }
         });
     </script>
